--- a/exercises/TD01_prise_en_main/01_prise_en_main.ipynb
+++ b/exercises/TD01_prise_en_main/01_prise_en_main.ipynb
@@ -41,10 +41,23 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 15,
    "metadata": {},
-   "outputs": [],
-   "source": []
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "2"
+      ]
+     },
+     "execution_count": 15,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "1 + 1"
+   ]
   },
   {
    "cell_type": "markdown",
@@ -59,10 +72,12 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 16,
    "metadata": {},
    "outputs": [],
-   "source": []
+   "source": [
+    "a= 1 + 1"
+   ]
   },
   {
    "cell_type": "markdown",
@@ -73,10 +88,23 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 17,
    "metadata": {},
-   "outputs": [],
-   "source": []
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "2"
+      ]
+     },
+     "execution_count": 17,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "a"
+   ]
   },
   {
    "cell_type": "markdown",
@@ -87,12 +115,22 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 18,
    "metadata": {
     "tags": []
    },
-   "outputs": [],
-   "source": []
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "2\n"
+     ]
+    }
+   ],
+   "source": [
+    "print(a)"
+   ]
   },
   {
    "cell_type": "markdown",
@@ -105,10 +143,12 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 19,
    "metadata": {},
    "outputs": [],
-   "source": []
+   "source": [
+    "a=a+1"
+   ]
   },
   {
    "cell_type": "markdown",
@@ -119,12 +159,22 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 20,
    "metadata": {
     "tags": []
    },
-   "outputs": [],
-   "source": []
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "3\n"
+     ]
+    }
+   ],
+   "source": [
+    "print(a)"
+   ]
   },
   {
    "cell_type": "markdown",
@@ -149,12 +199,15 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 1,
    "metadata": {
     "tags": []
    },
    "outputs": [],
-   "source": []
+   "source": [
+    "a=5\n",
+    "b=2"
+   ]
   },
   {
    "cell_type": "markdown",
@@ -165,12 +218,15 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 2,
    "metadata": {
     "tags": []
    },
    "outputs": [],
-   "source": []
+   "source": [
+    "a=2\n",
+    "b=5"
+   ]
   },
   {
    "cell_type": "markdown",
@@ -181,12 +237,22 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 3,
    "metadata": {
     "tags": []
    },
-   "outputs": [],
-   "source": []
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "a vaut 2 et b vaut 5\n"
+     ]
+    }
+   ],
+   "source": [
+    "print(\"a vaut\", a,\"et b vaut\", b)"
+   ]
   },
   {
    "cell_type": "markdown",
@@ -197,12 +263,26 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 5,
    "metadata": {
     "tags": []
    },
-   "outputs": [],
-   "source": []
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "'hello world'"
+      ]
+     },
+     "execution_count": 5,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "a= \"hello world\"\n",
+    "a"
+   ]
   },
   {
    "cell_type": "markdown",
@@ -730,7 +810,7 @@
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "Python 3",
+   "display_name": "Python 3.10.7 64-bit (microsoft store)",
    "language": "python",
    "name": "python3"
   },
@@ -744,7 +824,12 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.7.6-final"
+   "version": "3.10.7"
+  },
+  "vscode": {
+   "interpreter": {
+    "hash": "94aaf5f2e920302f56ba7d2b9eb1f631df10ffd34f6d3018aa8a23887e80e9cd"
+   }
   }
  },
  "nbformat": 4,
