--- a/exercises/TD01_prise_en_main/01_prise_en_main.ipynb
+++ b/exercises/TD01_prise_en_main/01_prise_en_main.ipynb
@@ -263,25 +263,23 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 27,
    "metadata": {
     "tags": []
    },
    "outputs": [
     {
-     "data": {
-      "text/plain": [
-       "'hello world'"
-      ]
-     },
-     "execution_count": 5,
-     "metadata": {},
-     "output_type": "execute_result"
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "hello world\n"
+     ]
     }
    ],
    "source": [
     "a= \"hello world\"\n",
-    "a"
+    "a\n",
+    "print(a)"
    ]
   },
   {
@@ -402,7 +400,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 33,
+   "execution_count": 8,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -420,12 +418,23 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 10,
    "metadata": {
     "tags": []
    },
-   "outputs": [],
-   "source": []
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "1907 = 173.36363636363637 * 11\n"
+     ]
+    }
+   ],
+   "source": [
+    "u = 1907 / 11\n",
+    "print(v, \"=\", u, \"* 11\") "
+   ]
   },
   {
    "cell_type": "markdown",
@@ -439,7 +448,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 36,
+   "execution_count": 15,
    "metadata": {},
    "outputs": [
     {
@@ -448,13 +457,13 @@
        "int"
       ]
      },
-     "execution_count": 36,
+     "execution_count": 15,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
-    "type((3*10)//3)"
+    "type((3 * 10) // 3)"
    ]
   },
   {
@@ -474,12 +483,30 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 25,
    "metadata": {
     "tags": []
    },
-   "outputs": [],
-   "source": []
+   "outputs": [
+    {
+     "ename": "SyntaxError",
+     "evalue": "expected ':' (3374181379.py, line 5)",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[1;36m  Cell \u001b[1;32mIn [25], line 5\u001b[1;36m\u001b[0m\n\u001b[1;33m    if x == pair_content\u001b[0m\n\u001b[1;37m                        ^\u001b[0m\n\u001b[1;31mSyntaxError\u001b[0m\u001b[1;31m:\u001b[0m expected ':'\n"
+     ]
+    }
+   ],
+   "source": [
+    "from curses import pair_content\n",
+    "\n",
+    "\n",
+    "x = 147\n",
+    "if x == pair_content\n",
+    "    print(\"True\")\n",
+    "else:\n",
+    "    print(\"False\")"
+   ]
   },
   {
    "cell_type": "markdown",
@@ -490,7 +517,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 37,
+   "execution_count": 26,
    "metadata": {
     "tags": []
    },
@@ -499,12 +526,16 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "115792089237316195423570985008687907853269984665640564039457584007913129639936\n"
+      "115792089237316195423570985008687907853269984665640564039457584007913129639936\n",
+      "78\n"
      ]
     }
    ],
    "source": [
-    "print(2**256)"
+    "n = 2**256\n",
+    "print(n)\n",
+    "digits = len(str(n))\n",
+    "print(digits)"
    ]
   },
   {
@@ -536,7 +567,9 @@
      ]
     }
    ],
-   "source": []
+   "source": [
+    "a = 1563"
+   ]
   },
   {
    "cell_type": "markdown",
@@ -965,12 +998,25 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 1,
    "metadata": {
     "tags": []
    },
-   "outputs": [],
-   "source": []
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "2"
+      ]
+     },
+     "execution_count": 1,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "1+1"
+   ]
   },
   {
    "cell_type": "markdown",
@@ -985,10 +1031,30 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 2,
    "metadata": {
     "tags": []
    },
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "2"
+      ]
+     },
+     "execution_count": 2,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "1+1"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
    "outputs": [],
    "source": []
   }
