--- a/exercises/TD01_prise_en_main/01_prise_en_main.ipynb
+++ b/exercises/TD01_prise_en_main/01_prise_en_main.ipynb
@@ -317,7 +317,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 23,
+   "execution_count": 15,
    "metadata": {},
    "outputs": [
     {
@@ -326,13 +326,13 @@
        "bool"
       ]
      },
-     "execution_count": 23,
+     "execution_count": 15,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
-    "type(5==2)\n"
+    "type(5 == 2 )\n"
    ]
   },
   {
@@ -350,22 +350,23 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 21,
+   "execution_count": 17,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "type[5, 2]"
+       "tuple"
       ]
      },
-     "execution_count": 21,
+     "execution_count": 17,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
-    "type[5, 2]"
+    "a = (5, 2)\n",
+    "type(a)"
    ]
   },
   {
@@ -379,13 +380,22 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 20,
    "metadata": {
     "tags": []
    },
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "le type de x est  <class 'int'>\n"
+     ]
+    }
+   ],
    "source": [
-    "\n"
+    "x = 7\n",
+    "print(\"le type de x est \", type(x))\n"
    ]
   },
   {
@@ -400,7 +410,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 21,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -418,7 +428,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 22,
    "metadata": {
     "tags": []
    },
@@ -427,13 +437,14 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "1907 = 173.36363636363637 * 11\n"
+      "1907 = 173 * 11 + 4\n"
      ]
     }
    ],
    "source": [
-    "u = 1907 / 11\n",
-    "print(v, \"=\", u, \"* 11\") "
+    "u = 1907 // 11\n",
+    "q = 1907 % 11\n",
+    "print(v, \"=\", u, \"* 11 +\",q) "
    ]
   },
   {
@@ -448,22 +459,22 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 15,
+   "execution_count": 35,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "int"
+       "10"
       ]
      },
-     "execution_count": 15,
+     "execution_count": 35,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
-    "type((3 * 10) // 3)"
+    "3 * 10 // 3"
    ]
   },
   {
@@ -483,29 +494,22 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 25,
+   "execution_count": 38,
    "metadata": {
     "tags": []
    },
    "outputs": [
     {
-     "ename": "SyntaxError",
-     "evalue": "expected ':' (3374181379.py, line 5)",
-     "output_type": "error",
-     "traceback": [
-      "\u001b[1;36m  Cell \u001b[1;32mIn [25], line 5\u001b[1;36m\u001b[0m\n\u001b[1;33m    if x == pair_content\u001b[0m\n\u001b[1;37m                        ^\u001b[0m\n\u001b[1;31mSyntaxError\u001b[0m\u001b[1;31m:\u001b[0m expected ':'\n"
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "True\n"
      ]
     }
    ],
    "source": [
-    "from curses import pair_content\n",
-    "\n",
-    "\n",
-    "x = 147\n",
-    "if x == pair_content\n",
-    "    print(\"True\")\n",
-    "else:\n",
-    "    print(\"False\")"
+    "y = 2516\n",
+    "print(y % 2 == 0)"
    ]
   },
   {
@@ -517,7 +521,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 26,
+   "execution_count": 43,
    "metadata": {
     "tags": []
    },
@@ -529,13 +533,24 @@
       "115792089237316195423570985008687907853269984665640564039457584007913129639936\n",
       "78\n"
      ]
+    },
+    {
+     "data": {
+      "text/plain": [
+       "int"
+      ]
+     },
+     "execution_count": 43,
+     "metadata": {},
+     "output_type": "execute_result"
     }
    ],
    "source": [
     "n = 2**256\n",
     "print(n)\n",
-    "digits = len(str(n))\n",
-    "print(digits)"
+    "type(n)\n",
+    "print(len(str(n)))\n",
+    "type(n)"
    ]
   },
   {
@@ -554,7 +569,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 38,
+   "execution_count": 44,
    "metadata": {
     "tags": []
    },
@@ -563,12 +578,13 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "hello world\n"
+      "8\n"
      ]
     }
    ],
    "source": [
-    "a = 1563"
+    "a = 468\n",
+    "print(a % 10)"
    ]
   },
   {
@@ -580,12 +596,25 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 45,
    "metadata": {
     "tags": []
    },
-   "outputs": [],
-   "source": []
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "6\n"
+     ]
+    }
+   ],
+   "source": [
+    "a = 468\n",
+    "b = (a % 100) // 10\n",
+    "print(b)\n",
+    "\n"
+   ]
   },
   {
    "cell_type": "markdown",
@@ -599,12 +628,22 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 50,
    "metadata": {
     "tags": []
    },
-   "outputs": [],
-   "source": []
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "False\n"
+     ]
+    }
+   ],
+   "source": [
+    "print(0.2 + 0.4 == 0.6)"
+   ]
   },
   {
    "cell_type": "markdown",
@@ -615,26 +654,24 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 41,
+   "execution_count": 55,
    "metadata": {
     "tags": []
    },
    "outputs": [
     {
-     "data": {
-      "text/plain": [
-       "0"
-      ]
-     },
-     "execution_count": 41,
-     "metadata": {},
-     "output_type": "execute_result"
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "0.09999999962747097\n"
+     ]
     }
    ],
    "source": [
-    "x=0\n",
-    "h=x*(2**30)\n",
-    "int(h%(2**30))"
+    "x=0.1\n",
+    "y=x*2**30\n",
+    "z = int(y)/2**30\n",
+    "print(z)"
    ]
   },
   {
@@ -669,7 +706,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 45,
+   "execution_count": 60,
    "metadata": {
     "tags": []
    },
@@ -685,8 +722,8 @@
    ],
    "source": [
     "a = \"hello\"\n",
-    "b = 'world'\n",
-    "print(a, b)\n",
+    "b = \"world\"\n",
+    "print(a+\" \"+b)\n",
     "print(b, a)"
    ]
   },
@@ -766,7 +803,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 50,
+   "execution_count": 61,
    "metadata": {},
    "outputs": [
     {
@@ -790,24 +827,21 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 51,
+   "execution_count": 63,
    "metadata": {
     "tags": []
    },
    "outputs": [
     {
-     "data": {
-      "text/plain": [
-       "False"
-      ]
-     },
-     "execution_count": 51,
-     "metadata": {},
-     "output_type": "execute_result"
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "False\n"
+     ]
     }
    ],
    "source": [
-    "a>b"
+    "print(a > b)"
    ]
   },
   {
@@ -833,25 +867,22 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 52,
+   "execution_count": 64,
    "metadata": {
     "tags": []
    },
    "outputs": [
     {
-     "data": {
-      "text/plain": [
-       "'3232'"
-      ]
-     },
-     "execution_count": 52,
-     "metadata": {},
-     "output_type": "execute_result"
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "3232\n"
+     ]
     }
    ],
    "source": [
     "a = \"32\"\n",
-    "a * 2"
+    "print(a * 2)"
    ]
   },
   {
@@ -863,25 +894,24 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 58,
+   "execution_count": 72,
    "metadata": {
     "tags": []
    },
    "outputs": [
     {
-     "data": {
-      "text/plain": [
-       "64"
-      ]
-     },
-     "execution_count": 58,
-     "metadata": {},
-     "output_type": "execute_result"
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "64\n",
+      "64\n"
+     ]
     }
    ],
    "source": [
     "a = 32\n",
-    "int(a * 2)"
+    "print(a * 2)\n",
+    "print(int(a)*2)"
    ]
   },
   {
@@ -893,7 +923,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 61,
+   "execution_count": 74,
    "metadata": {
     "tags": []
    },
@@ -902,13 +932,13 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "2\n"
+      "3232\n"
      ]
     }
    ],
    "source": [
     "s = input(\"Tape quelquechose au clavier\")\n",
-    "print(s)"
+    "print(s*2)"
    ]
   },
   {
@@ -920,7 +950,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 66,
+   "execution_count": 78,
    "metadata": {
     "tags": []
    },
@@ -929,14 +959,13 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "66\n"
+      "12\n"
      ]
     }
    ],
    "source": [
     "s = input(\"Tapez quelque chose au clavier\")\n",
-    "j=s * 2\n",
-    "print(j)"
+    "print(int(s)*2)"
    ]
   },
   {
@@ -948,12 +977,23 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 83,
    "metadata": {
     "tags": []
    },
-   "outputs": [],
-   "source": []
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "En 2031 tu aura 27 ans\n"
+     ]
+    }
+   ],
+   "source": [
+    "d = input(\"Tapez son age\")\n",
+    "print(\"En 2031 tu aura\", int (d) + 9, \"ans\")"
+   ]
   },
   {
    "cell_type": "markdown",
