--- a/exercises/TD02_structures_controle/02_structures_controle.ipynb
+++ b/exercises/TD02_structures_controle/02_structures_controle.ipynb
@@ -42,14 +42,29 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 35,
    "metadata": {
     "slideshow": {
      "slide_type": "notes"
     }
    },
-   "outputs": [],
-   "source": []
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      " \n"
+     ]
+    }
+   ],
+   "source": [
+    "num1 = \n",
+    "num2 = 5\n",
+    "if num1 // num2 == 0 :\n",
+    "    print(\"Factors!\") \n",
+    "else :\n",
+    "    print(\" \")"
+   ]
   },
   {
    "cell_type": "markdown",
@@ -70,14 +85,34 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 6,
    "metadata": {
     "slideshow": {
      "slide_type": "notes"
     }
    },
-   "outputs": [],
-   "source": []
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "School is cancelled!\n"
+     ]
+    }
+   ],
+   "source": [
+    "from sys import get_coroutine_origin_tracking_depth\n",
+    "\n",
+    "state = \"Georgia\"\n",
+    "if state == \"New Jersey\" :\n",
+    "    print(\"School is cancelled\")\n",
+    "if state == \"North Carolina\" :\n",
+    "    print(\"School is postponed\")\n",
+    "if state == \"Georgia\" :\n",
+    "    print(\"School is cancelled!\")\n",
+    "else :\n",
+    "    print(\"School's status is unknow\")"
+   ]
   },
   {
    "cell_type": "markdown",
@@ -108,14 +143,49 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 31,
    "metadata": {
     "slideshow": {
      "slide_type": "notes"
     }
    },
-   "outputs": [],
-   "source": []
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Monkey !\n"
+     ]
+    }
+   ],
+   "source": [
+    "c = int(input(\" Quelle est ton année de naissance?\"))\n",
+    "if c % 12 == 0 :\n",
+    "    print(\"Monkey !\")\n",
+    "if c % 12 == 1 :\n",
+    "    print(\"rooster\")\n",
+    "if c % 12 == 2 :\n",
+    "    print(\"dog\")\n",
+    "if c % 12 == 3:\n",
+    "    print(\"pig\")\n",
+    "if c % 12 == 4 :\n",
+    "    print(\"rat\")\n",
+    "if c % 12 == 5 :\n",
+    "    print(\"ox\")\n",
+    "if c % 12 == 6 :\n",
+    "    print(\"tiger\")\n",
+    "if c % 12 == 7 :\n",
+    "    print(\"rabbit\")\n",
+    "if c % 12 == 8 :\n",
+    "    print(\"dragon\")\n",
+    "if c % 12 == 9 :\n",
+    "    print(\"snake\")\n",
+    "if c % 12 == 10 :\n",
+    "    print(\"horse\")\n",
+    "if c % 12 == 11 :\n",
+    "    print(\"sheep\")\n",
+    "\n"
+   ]
   },
   {
    "cell_type": "markdown",
@@ -132,14 +202,29 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 16,
    "metadata": {
     "slideshow": {
      "slide_type": "notes"
     }
    },
-   "outputs": [],
-   "source": []
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "True\n"
+     ]
+    }
+   ],
+   "source": [
+    "température = -3.7\n",
+    "celsius = \"True\"\n",
+    "if température < 0 :\n",
+    "    print(celsius)\n",
+    "else :\n",
+    "    print(\"False\")"
+   ]
   },
   {
    "cell_type": "markdown",
@@ -157,16 +242,32 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 20,
    "metadata": {
     "slideshow": {
      "slide_type": "notes"
     }
    },
-   "outputs": [],
-   "source": []
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Année non bisextile\n"
+     ]
+    }
+   ],
+   "source": [
+    "a = 2012\n",
+    "if a / 4 == 0 :\n",
+    "    print(\"Année bisextile\") \n",
+    "else :\n",
+    "    print(\"Année non bisextile\") "
+   ]
   },
   {
+   "cell_type": "markdown",
+   "metadata": {},
    "source": [
     "---\n",
     "\n",
@@ -176,43 +277,94 @@
     "\n",
     "1. Ecrire un programme qui permet d'afficher tous les nombres entre 1 et 10 (bornes incluses).\n",
     "2. Ecrire un programme se limitant à la boucle *for* qui permet d'afficher tous les nombres pairs entre 1 et 20 (bornes incluses). Proposer une deuxième solution en incluant une structure conditionnelle."
-   ],
-   "cell_type": "markdown",
-   "metadata": {}
+   ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 22,
    "metadata": {},
-   "outputs": [],
-   "source": []
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Afficher les valeurs dans l'intervalle\n",
+      "i = 1\n",
+      "i = 2\n",
+      "i = 3\n",
+      "i = 4\n",
+      "i = 5\n",
+      "i = 6\n",
+      "i = 7\n",
+      "i = 8\n",
+      "i = 9\n",
+      "i = 10\n",
+      "i = 11\n",
+      "i = 12\n",
+      "i = 13\n",
+      "i = 14\n",
+      "i = 15\n",
+      "i = 16\n",
+      "i = 17\n",
+      "i = 18\n",
+      "i = 19\n",
+      "i = 20\n"
+     ]
+    }
+   ],
+   "source": [
+    "print(\"Afficher les valeurs dans l'intervalle\")\n",
+    "for i in range (1, 21) :\n",
+    "    print (\"i =\", i)\n"
+   ]
   },
   {
+   "cell_type": "markdown",
+   "metadata": {},
    "source": [
     "**Exercice 7:**\n",
     "    \n",
     "1. Ecrire un programme qui demande à l'utilisateur de saisir *n* nombres, *n* étant choisi par l'utilisateur, puis d'afficher la moyenne de ces nombres.\n",
     "\n",
     "2. Même question, mais l'utilisateur ne choisit pas à l'avance le nombre *n*, la procédure s'arrête quand il saisit le nombre -1.\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 41,
+   "metadata": {},
+   "outputs": [
+    {
+     "ename": "ValueError",
+     "evalue": "invalid literal for int() with base 10: '10, 20, 30'",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[1;31m---------------------------------------------------------------------------\u001b[0m",
+      "\u001b[1;31mValueError\u001b[0m                                Traceback (most recent call last)",
+      "Cell \u001b[1;32mIn [41], line 1\u001b[0m\n\u001b[1;32m----> 1\u001b[0m liste_de_nombres \u001b[38;5;241m=\u001b[39m \u001b[38;5;28mint\u001b[39m(\u001b[38;5;28minput\u001b[39m(\u001b[38;5;124m\"\u001b[39m\u001b[38;5;124mEntrez 3 nombres :\u001b[39m\u001b[38;5;124m\"\u001b[39m))\n\u001b[0;32m      2\u001b[0m \u001b[38;5;28msum\u001b[39m \u001b[38;5;241m=\u001b[39m \u001b[38;5;241m0\u001b[39m\n\u001b[0;32m      4\u001b[0m \u001b[38;5;28;01mfor\u001b[39;00m nb \u001b[38;5;129;01min\u001b[39;00m liste_de_nombres :\n",
+      "\u001b[1;31mValueError\u001b[0m: invalid literal for int() with base 10: '10, 20, 30'"
+     ]
+    }
    ],
+   "source": [
+    "liste_de_nombres = int(input(\"Entrez 3 nombres :\"))\n",
+    "sum = 0\n",
+    "\n",
+    "for nb in liste_de_nombres :\n",
+    "    sum += nb\n",
+    "print(\"La moyenne de\", liste_de_nombres, \"vaut\", sum / len(liste_de_nombres))"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
    "cell_type": "markdown",
-   "metadata": {}
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
    "metadata": {},
-   "outputs": [],
-   "source": []
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": []
-  },
-  {
    "source": [
     "**Exercice 8:**\n",
     "\n",
@@ -221,9 +373,7 @@
     "\n",
     "1. Une première version en utilisant la boucle *for*\n",
     "2. Une seconde version en utilisant la boucle *while*"
-   ],
-   "cell_type": "markdown",
-   "metadata": {}
+   ]
   },
   {
    "cell_type": "code",
@@ -308,13 +458,13 @@
    "source": []
   },
   {
+   "cell_type": "markdown",
+   "metadata": {},
    "source": [
     "**Exercice 11:**\n",
     "    \n",
     "Ecrire un programme qui permet de calculer la somme des chiffres d'un entier *n* donné. Le nombre *n* doit être compris entre 10 et 20 (bornes incluses)."
-   ],
-   "cell_type": "markdown",
-   "metadata": {}
+   ]
   },
   {
    "cell_type": "code",
@@ -324,14 +474,14 @@
    "source": []
   },
   {
+   "cell_type": "markdown",
+   "metadata": {},
    "source": [
     "**Exercice 12:**\n",
     "\n",
     "1. Ecrire un programme qui permet de générer aléatoirement deux nombres entre 0 et 9, de calculer leurs différences (en valeur absolue), puis d'inviter l'utilisateur à répondre à la question suivante *que vaut abs(number1 - number2)?*. Le programme doit permettre à l'utilisateur de répondre plusieurs fois jusqu'à la saisie de la bonne réponse.\n",
     "2. Modifier le programme précédent de telle sorte qu'il génère cinq occurences à la suite invitant à répondre à la question précédente. A la fin, le programme affiche le nombre moyen de tentatives qu'il a fallu à l'utilisateur pour répondre à une question."
-   ],
-   "cell_type": "markdown",
-   "metadata": {}
+   ]
   },
   {
    "cell_type": "code",
@@ -354,13 +504,13 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "metadata": {},
    "source": [
     "**Exercice 13:**\n",
     "\n",
     "Ecrire un programme qui permet de calculer le nombre de mots dans une phrase saisie par l'utilisateur."
-   ],
-   "cell_type": "markdown",
-   "metadata": {}
+   ]
   },
   {
    "cell_type": "code",
@@ -488,6 +638,8 @@
    "source": []
   },
   {
+   "cell_type": "markdown",
+   "metadata": {},
    "source": [
     "**Exercice 17:**\n",
     "\n",
@@ -500,9 +652,7 @@
     "*****\n",
     "******\n",
     "```"
-   ],
-   "cell_type": "markdown",
-   "metadata": {}
+   ]
   },
   {
    "cell_type": "code",
@@ -514,6 +664,8 @@
    "source": []
   },
   {
+   "cell_type": "markdown",
+   "metadata": {},
    "source": [
     "**Exercice 18:**\n",
     "\n",
@@ -526,9 +678,7 @@
     " *****\n",
     "******\n",
     "```"
-   ],
-   "cell_type": "markdown",
-   "metadata": {}
+   ]
   },
   {
    "cell_type": "code",
@@ -540,13 +690,13 @@
    "source": []
   },
   {
+   "cell_type": "markdown",
+   "metadata": {},
    "source": [
     "**Exercice 19:**\n",
     "\n",
     "Ecrire un programme qui calcule, étant donné un entier *n* rentré par l'utilisateur, la plus grande puissance de *n* inférieure à un million."
-   ],
-   "cell_type": "markdown",
-   "metadata": {}
+   ]
   },
   {
    "cell_type": "code",
@@ -561,7 +711,7 @@
  "metadata": {
   "celltoolbar": "Diaporama",
   "kernelspec": {
-   "display_name": "Python 3",
+   "display_name": "Python 3.10.7 64-bit (microsoft store)",
    "language": "python",
    "name": "python3"
   },
@@ -575,7 +725,12 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.7.6-final"
+   "version": "3.10.7"
+  },
+  "vscode": {
+   "interpreter": {
+    "hash": "94aaf5f2e920302f56ba7d2b9eb1f631df10ffd34f6d3018aa8a23887e80e9cd"
+   }
   }
  },
  "nbformat": 4,
