préparation pour le TP 3

--- a/exercises/TD02_structures_controle/02_structures_controle.ipynb
+++ b/exercises/TD02_structures_controle/02_structures_controle.ipynb
@@ -42,7 +42,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 35,
+   "execution_count": 12,
    "metadata": {
     "slideshow": {
      "slide_type": "notes"
@@ -53,17 +53,17 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      " \n"
+      "Not Factors\n"
      ]
     }
    ],
    "source": [
-    "num1 = \n",
+    "num1 = 16\n",
     "num2 = 5\n",
-    "if num1 // num2 == 0 :\n",
+    "if num1 % num2 == 0 or num2 % num1 == 0:\n",
     "    print(\"Factors!\") \n",
     "else :\n",
-    "    print(\" \")"
+    "    print(\"Not Factors\")"
    ]
   },
   {
@@ -85,7 +85,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 18,
    "metadata": {
     "slideshow": {
      "slide_type": "notes"
@@ -101,14 +101,12 @@
     }
    ],
    "source": [
-    "from sys import get_coroutine_origin_tracking_depth\n",
-    "\n",
     "state = \"Georgia\"\n",
     "if state == \"New Jersey\" :\n",
-    "    print(\"School is cancelled\")\n",
-    "if state == \"North Carolina\" :\n",
+    "    print(\"School isn't cancelled\")\n",
+    "elif state == \"North Carolina\" :\n",
     "    print(\"School is postponed\")\n",
-    "if state == \"Georgia\" :\n",
+    "elif state == \"Georgia\" :\n",
     "    print(\"School is cancelled!\")\n",
     "else :\n",
     "    print(\"School's status is unknow\")"
@@ -143,7 +141,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 31,
+   "execution_count": 21,
    "metadata": {
     "slideshow": {
      "slide_type": "notes"
@@ -154,14 +152,14 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Monkey !\n"
+      "Monkey\n"
      ]
     }
    ],
    "source": [
     "c = int(input(\" Quelle est ton année de naissance?\"))\n",
     "if c % 12 == 0 :\n",
-    "    print(\"Monkey !\")\n",
+    "    print(\"Monkey\")\n",
     "if c % 12 == 1 :\n",
     "    print(\"rooster\")\n",
     "if c % 12 == 2 :\n",
@@ -183,8 +181,7 @@
     "if c % 12 == 10 :\n",
     "    print(\"horse\")\n",
     "if c % 12 == 11 :\n",
-    "    print(\"sheep\")\n",
-    "\n"
+    "    print(\"sheep\")"
    ]
   },
   {
@@ -202,7 +199,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 16,
+   "execution_count": 37,
    "metadata": {
     "slideshow": {
      "slide_type": "notes"
@@ -213,17 +210,43 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "True\n"
+      "Freezing\n"
      ]
     }
    ],
    "source": [
-    "température = -3.7\n",
-    "celsius = \"True\"\n",
-    "if température < 0 :\n",
-    "    print(celsius)\n",
-    "else :\n",
-    "    print(\"False\")"
+    "temperature = -3.7\n",
+    "celsius = True\n",
+    "\n",
+    "if (temperature <= 0 and celsius) or (not celsius and temperature <= 32) : \n",
+    "    print(\"Freezing\")\n",
+    "else : \n",
+    "    print(\"Not Freezing\")"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 38,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Freezing\n"
+     ]
+    }
+   ],
+   "source": [
+    "temperature = -3.7\n",
+    "celsius = True\n",
+    "\n",
+    "if temperature <= 0 and celsius :\n",
+    "    print(\"Freezing\")\n",
+    "elif temperature <= 32 and temperature != celsius :\n",
+    "    print(\"Freezing\")\n",
+    "else : \n",
+    "    print(\"Not Freezing\")"
    ]
   },
   {
@@ -242,7 +265,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 20,
+   "execution_count": 42,
    "metadata": {
     "slideshow": {
      "slide_type": "notes"
@@ -253,16 +276,16 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Année non bisextile\n"
+      "Année bisextile\n"
      ]
     }
    ],
    "source": [
-    "a = 2012\n",
-    "if a / 4 == 0 :\n",
+    "a = int(input(\" Tapez une année\"))\n",
+    "if a % 4 == 0 or a % 400 == 0 and a % 100 != 0 :\n",
     "    print(\"Année bisextile\") \n",
-    "else :\n",
-    "    print(\"Année non bisextile\") "
+    "else  :\n",
+    "    print(\"Année non bisextile\")"
    ]
   },
   {
@@ -281,7 +304,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 22,
+   "execution_count": 40,
    "metadata": {},
    "outputs": [
     {
@@ -298,23 +321,13 @@
       "i = 7\n",
       "i = 8\n",
       "i = 9\n",
-      "i = 10\n",
-      "i = 11\n",
-      "i = 12\n",
-      "i = 13\n",
-      "i = 14\n",
-      "i = 15\n",
-      "i = 16\n",
-      "i = 17\n",
-      "i = 18\n",
-      "i = 19\n",
-      "i = 20\n"
+      "i = 10\n"
      ]
     }
    ],
    "source": [
     "print(\"Afficher les valeurs dans l'intervalle\")\n",
-    "for i in range (1, 21) :\n",
+    "for i in range (1, 11) :\n",
     "    print (\"i =\", i)\n"
    ]
   },
@@ -331,36 +344,59 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 41,
+   "execution_count": 49,
    "metadata": {},
    "outputs": [
     {
-     "ename": "ValueError",
-     "evalue": "invalid literal for int() with base 10: '10, 20, 30'",
-     "output_type": "error",
-     "traceback": [
-      "\u001b[1;31m---------------------------------------------------------------------------\u001b[0m",
-      "\u001b[1;31mValueError\u001b[0m                                Traceback (most recent call last)",
-      "Cell \u001b[1;32mIn [41], line 1\u001b[0m\n\u001b[1;32m----> 1\u001b[0m liste_de_nombres \u001b[38;5;241m=\u001b[39m \u001b[38;5;28mint\u001b[39m(\u001b[38;5;28minput\u001b[39m(\u001b[38;5;124m\"\u001b[39m\u001b[38;5;124mEntrez 3 nombres :\u001b[39m\u001b[38;5;124m\"\u001b[39m))\n\u001b[0;32m      2\u001b[0m \u001b[38;5;28msum\u001b[39m \u001b[38;5;241m=\u001b[39m \u001b[38;5;241m0\u001b[39m\n\u001b[0;32m      4\u001b[0m \u001b[38;5;28;01mfor\u001b[39;00m nb \u001b[38;5;129;01min\u001b[39;00m liste_de_nombres :\n",
-      "\u001b[1;31mValueError\u001b[0m: invalid literal for int() with base 10: '10, 20, 30'"
-     ]
+     "data": {
+      "text/plain": [
+       "3.5"
+      ]
+     },
+     "execution_count": 49,
+     "metadata": {},
+     "output_type": "execute_result"
     }
    ],
    "source": [
-    "liste_de_nombres = int(input(\"Entrez 3 nombres :\"))\n",
-    "sum = 0\n",
-    "\n",
-    "for nb in liste_de_nombres :\n",
-    "    sum += nb\n",
-    "print(\"La moyenne de\", liste_de_nombres, \"vaut\", sum / len(liste_de_nombres))"
+    "n = int(input(\"Choisir un nombre n de nombre \"))\n",
+    "result = 0\n",
+    "for x in range (n):\n",
+    "    x=int(input(\"Choisir un nombre\"))\n",
+    "    result+=x\n",
+    "result=result/n\n",
+    "result"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 50,
    "metadata": {},
-   "outputs": [],
-   "source": []
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "4.333333333333333"
+      ]
+     },
+     "execution_count": 50,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "n= 3\n",
+    "w = int(input(\"Choisir un nombre\"))\n",
+    "result = 0\n",
+    "if w == -1 :\n",
+    "    print(\" \")\n",
+    "else :\n",
+    "    for x in range (n):\n",
+    "        x=int(input(\"Choisir un nombre\"))\n",
+    "        result += x\n",
+    "    result = result/n\n",
+    "result"
+   ]
   },
   {
    "cell_type": "markdown",
@@ -377,10 +413,24 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 56,
    "metadata": {},
-   "outputs": [],
-   "source": []
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Le factoriel de  4 vaut 24\n"
+     ]
+    }
+   ],
+   "source": [
+    "n = int(input(\"Entrez un nombre\"))\n",
+    "result = n\n",
+    "for i in range(1, 1*n):\n",
+    "    result *= i\n",
+    "print(\"Le factoriel de \",n, \"vaut\", result)"
+   ]
   },
   {
    "cell_type": "code",
