--- a/exercises/TD02_structures_controle/02_structures_controle.ipynb
+++ b/exercises/TD02_structures_controle/02_structures_controle.ipynb
@@ -370,18 +370,19 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 50,
+   "execution_count": 57,
    "metadata": {},
    "outputs": [
     {
-     "data": {
-      "text/plain": [
-       "4.333333333333333"
-      ]
-     },
-     "execution_count": 50,
-     "metadata": {},
-     "output_type": "execute_result"
+     "ename": "ValueError",
+     "evalue": "invalid literal for int() with base 10: ''",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[1;31m---------------------------------------------------------------------------\u001b[0m",
+      "\u001b[1;31mValueError\u001b[0m                                Traceback (most recent call last)",
+      "Cell \u001b[1;32mIn [57], line 8\u001b[0m\n\u001b[0;32m      6\u001b[0m \u001b[38;5;28;01melse\u001b[39;00m :\n\u001b[0;32m      7\u001b[0m     \u001b[38;5;28;01mfor\u001b[39;00m x \u001b[38;5;129;01min\u001b[39;00m \u001b[38;5;28mrange\u001b[39m (n):\n\u001b[1;32m----> 8\u001b[0m         x\u001b[38;5;241m=\u001b[39m\u001b[38;5;28mint\u001b[39m(\u001b[38;5;28minput\u001b[39m(\u001b[38;5;124m\"\u001b[39m\u001b[38;5;124mChoisir un nombre\u001b[39m\u001b[38;5;124m\"\u001b[39m))\n\u001b[0;32m      9\u001b[0m         result \u001b[38;5;241m+\u001b[39m\u001b[38;5;241m=\u001b[39m x\n\u001b[0;32m     10\u001b[0m     result \u001b[38;5;241m=\u001b[39m result\u001b[38;5;241m/\u001b[39mn\n",
+      "\u001b[1;31mValueError\u001b[0m: invalid literal for int() with base 10: ''"
+     ]
     }
    ],
    "source": [
