--- a/exercises/TD02_structures_controle/02_structures_controle.ipynb
+++ b/exercises/TD02_structures_controle/02_structures_controle.ipynb
@@ -344,47 +344,53 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 49,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [
     {
-     "data": {
-      "text/plain": [
-       "3.5"
-      ]
-     },
-     "execution_count": 49,
-     "metadata": {},
-     "output_type": "execute_result"
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "les moyenne est 7.0\n"
+     ]
     }
    ],
    "source": [
     "n = int(input(\"Choisir un nombre n de nombre \"))\n",
-    "result = 0\n",
-    "for x in range (n):\n",
-    "    x=int(input(\"Choisir un nombre\"))\n",
-    "    result+=x\n",
-    "result=result/n\n",
-    "result"
+    "total = 0\n",
+    "for i in range (n):\n",
+    "    total = total + int(input(\"choisir un nombre\"))\n",
+    "print(\"les moyenne est\", total /n)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 57,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [
     {
-     "ename": "ValueError",
-     "evalue": "invalid literal for int() with base 10: ''",
-     "output_type": "error",
-     "traceback": [
-      "\u001b[1;31m---------------------------------------------------------------------------\u001b[0m",
-      "\u001b[1;31mValueError\u001b[0m                                Traceback (most recent call last)",
-      "Cell \u001b[1;32mIn [57], line 8\u001b[0m\n\u001b[0;32m      6\u001b[0m \u001b[38;5;28;01melse\u001b[39;00m :\n\u001b[0;32m      7\u001b[0m     \u001b[38;5;28;01mfor\u001b[39;00m x \u001b[38;5;129;01min\u001b[39;00m \u001b[38;5;28mrange\u001b[39m (n):\n\u001b[1;32m----> 8\u001b[0m         x\u001b[38;5;241m=\u001b[39m\u001b[38;5;28mint\u001b[39m(\u001b[38;5;28minput\u001b[39m(\u001b[38;5;124m\"\u001b[39m\u001b[38;5;124mChoisir un nombre\u001b[39m\u001b[38;5;124m\"\u001b[39m))\n\u001b[0;32m      9\u001b[0m         result \u001b[38;5;241m+\u001b[39m\u001b[38;5;241m=\u001b[39m x\n\u001b[0;32m     10\u001b[0m     result \u001b[38;5;241m=\u001b[39m result\u001b[38;5;241m/\u001b[39mn\n",
-      "\u001b[1;31mValueError\u001b[0m: invalid literal for int() with base 10: ''"
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "la moyenne de 1 nombres est 5.0\n"
      ]
     }
    ],
+   "source": [
+    "somme = 0\n",
+    "n = 0\n",
+    "total = 0\n",
+    "while n!=-1:\n",
+    "    n = int(input(\"choisir un nombre\"))\n",
+    "    if n!= -1:\n",
+    "        somme+=n\n",
+    "        total+=1\n",
+    "print(\"la moyenne de\" , total, \"nombres est\" , somme/total)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
    "source": [
     "n= 3\n",
     "w = int(input(\"Choisir un nombre\"))\n",
@@ -414,31 +420,38 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 56,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Le factoriel de  4 vaut 24\n"
+      "Le factoriel de  6 vaut 720\n"
      ]
     }
    ],
    "source": [
     "n = int(input(\"Entrez un nombre\"))\n",
-    "result = n\n",
-    "for i in range(1, 1*n):\n",
+    "result = 1\n",
+    "for i in range(1, n+1):\n",
     "    result *= i\n",
     "print(\"Le factoriel de \",n, \"vaut\", result)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 9,
    "metadata": {},
    "outputs": [],
-   "source": []
+   "source": [
+    "n = int(input(\"choisir un nombre\"))\n",
+    "resultat = 1\n",
+    "i = 1\n",
+    "while n>0 :\n",
+    "    resultat*=i\n",
+    "    print(\"factoriel\", n, \"est égal\", resultat)"
+   ]
   },
   {
    "cell_type": "markdown",
