--- a/exercises/TD02_structures_controle/02_structures_controle.ipynb
+++ b/exercises/TD02_structures_controle/02_structures_controle.ipynb
@@ -304,31 +304,87 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 40,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Afficher les valeurs dans l'intervalle\n",
-      "i = 1\n",
-      "i = 2\n",
-      "i = 3\n",
-      "i = 4\n",
-      "i = 5\n",
-      "i = 6\n",
-      "i = 7\n",
-      "i = 8\n",
-      "i = 9\n",
-      "i = 10\n"
+      "1\n",
+      "2\n",
+      "3\n",
+      "4\n",
+      "5\n",
+      "6\n",
+      "7\n",
+      "8\n",
+      "9\n",
+      "10\n"
      ]
     }
    ],
    "source": [
-    "print(\"Afficher les valeurs dans l'intervalle\")\n",
+    "#1\n",
     "for i in range (1, 11) :\n",
-    "    print (\"i =\", i)\n"
+    "    print (i)\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 11,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "2\n",
+      "4\n",
+      "6\n",
+      "8\n",
+      "10\n",
+      "12\n",
+      "14\n",
+      "16\n",
+      "18\n",
+      "20\n"
+     ]
+    }
+   ],
+   "source": [
+    "#2\n",
+    "for i in range (2,21,2):\n",
+    "    print(i)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 7,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "2\n",
+      "4\n",
+      "6\n",
+      "8\n",
+      "10\n",
+      "12\n",
+      "14\n",
+      "16\n",
+      "18\n",
+      "20\n"
+     ]
+    }
+   ],
+   "source": [
+    "#2\n",
+    "for i in range (1,21):\n",
+    "    if i % 2 == 0 :\n",
+    "        print(i)"
    ]
   },
   {
@@ -344,14 +400,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 14,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "les moyenne est 7.0\n"
+      "la moyenne est 15.0\n"
      ]
     }
    ],
@@ -359,50 +415,60 @@
     "n = int(input(\"Choisir un nombre n de nombre \"))\n",
     "total = 0\n",
     "for i in range (n):\n",
-    "    total = total + int(input(\"choisir un nombre\"))\n",
-    "print(\"les moyenne est\", total /n)"
+    "    total += int(input(\"choisir un nombre\"))\n",
+    "print(\"la moyenne est\", total /n)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 16,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "la moyenne de 1 nombres est 5.0\n"
+      "la moyenne des nombres est 3.5\n"
      ]
     }
    ],
    "source": [
     "somme = 0\n",
     "n = 0\n",
-    "total = 0\n",
-    "while n!=-1:\n",
-    "    n = int(input(\"choisir un nombre\"))\n",
-    "    if n!= -1:\n",
-    "        somme+=n\n",
-    "        total+=1\n",
-    "print(\"la moyenne de\" , total, \"nombres est\" , somme/total)"
+    "Nombre_saisie = 0\n",
+    "while Nombre_saisie != -1:\n",
+    "    Nombre_saisie = int(input(\"choisir un nombre\"))\n",
+    "    if Nombre_saisie!= -1:\n",
+    "        somme+=Nombre_saisie\n",
+    "        n+=1\n",
+    "print(\"la moyenne des nombres est\" , somme/n)"
    ]
   },
   {
-   "cell_type": "markdown",
+   "cell_type": "code",
+   "execution_count": 18,
    "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "la moyenne des nombres est  5.0\n"
+     ]
+    }
+   ],
    "source": [
-    "n= 3\n",
-    "w = int(input(\"Choisir un nombre\"))\n",
-    "result = 0\n",
-    "if w == -1 :\n",
-    "    print(\" \")\n",
-    "else :\n",
-    "    for x in range (n):\n",
-    "        x=int(input(\"Choisir un nombre\"))\n",
-    "        result += x\n",
-    "    result = result/n\n",
-    "result"
+    "#Autre méthode\n",
+    "sum = 0\n",
+    "n = 0\n",
+    "NS = 0\n",
+    "while True :\n",
+    "    NS = int(input(\"saisir un nombre\"))\n",
+    "    if NS == -1 :\n",
+    "        break\n",
+    "    sum += NS\n",
+    "    n += 1\n",
+    "print(\"la moyenne des nombres est \", sum/n)"
    ]
   },
   {
@@ -420,14 +486,39 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 27,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Le factoriel de  6 vaut 720\n"
+      "Le factoriel de  5 vaut 120\n"
+     ]
+    }
+   ],
+   "source": [
+    "#correction\n",
+    "n = int(input(\"saisir un nombre\"))\n",
+    "if n < 0 :\n",
+    "    print (\"mauvais nombre\")\n",
+    "else :\n",
+    "    m = 1\n",
+    "    for i in range (1,n+1) :\n",
+    "        m*= i\n",
+    "    print(\"Le factoriel de \",n, \"vaut\", m)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 20,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Le factoriel de  -2 vaut 1\n"
      ]
     }
    ],
@@ -441,6 +532,34 @@
   },
   {
    "cell_type": "code",
+   "execution_count": 1,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "le factoriel de  5 est egal a  120\n"
+     ]
+    }
+   ],
+   "source": [
+    "#correction\n",
+    "n = int(input(\"saisir un nombre\"))\n",
+    "\n",
+    "if n < 0 :\n",
+    "    print(\"mauvais nombre\")\n",
+    "else :\n",
+    "    m = 1\n",
+    "    i = 1\n",
+    "    while i < n + 1 :\n",
+    "        m *= i\n",
+    "        i += 1\n",
+    "    print(\"le factoriel de \", n, \"est egal a \", m )"
+   ]
+  },
+  {
+   "cell_type": "code",
    "execution_count": 9,
    "metadata": {},
    "outputs": [],
@@ -450,7 +569,7 @@
     "i = 1\n",
     "while n>0 :\n",
     "    resultat*=i\n",
-    "    print(\"factoriel\", n, \"est égal\", resultat)"
+    "    print(\"factoriel\", n, \"est égal à\", resultat)"
    ]
   },
   {
