--- a/exercises/TD02_structures_controle/02_structures_controle.ipynb
+++ b/exercises/TD02_structures_controle/02_structures_controle.ipynb
@@ -42,21 +42,13 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": null,
    "metadata": {
     "slideshow": {
      "slide_type": "notes"
     }
    },
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "Not Factors\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "num1 = 16\n",
     "num2 = 5\n",
@@ -85,21 +77,13 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 18,
+   "execution_count": null,
    "metadata": {
     "slideshow": {
      "slide_type": "notes"
     }
    },
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "School is cancelled!\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "state = \"Georgia\"\n",
     "if state == \"New Jersey\" :\n",
@@ -141,21 +125,13 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 21,
+   "execution_count": null,
    "metadata": {
     "slideshow": {
      "slide_type": "notes"
     }
    },
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "Monkey\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "c = int(input(\" Quelle est ton année de naissance?\"))\n",
     "if c % 12 == 0 :\n",
@@ -199,21 +175,13 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 37,
+   "execution_count": null,
    "metadata": {
     "slideshow": {
      "slide_type": "notes"
     }
    },
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "Freezing\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "temperature = -3.7\n",
     "celsius = True\n",
@@ -226,17 +194,9 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 38,
+   "execution_count": null,
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "Freezing\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "temperature = -3.7\n",
     "celsius = True\n",
@@ -265,21 +225,13 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 42,
+   "execution_count": null,
    "metadata": {
     "slideshow": {
      "slide_type": "notes"
     }
    },
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "Année bisextile\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "a = int(input(\" Tapez une année\"))\n",
     "if a % 4 == 0 or a % 400 == 0 and a % 100 != 0 :\n",
@@ -304,26 +256,9 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": null,
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "1\n",
-      "2\n",
-      "3\n",
-      "4\n",
-      "5\n",
-      "6\n",
-      "7\n",
-      "8\n",
-      "9\n",
-      "10\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "#1\n",
     "for i in range (1, 11) :\n",
@@ -332,26 +267,9 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": null,
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "2\n",
-      "4\n",
-      "6\n",
-      "8\n",
-      "10\n",
-      "12\n",
-      "14\n",
-      "16\n",
-      "18\n",
-      "20\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "#2\n",
     "for i in range (2,21,2):\n",
@@ -360,26 +278,9 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": null,
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "2\n",
-      "4\n",
-      "6\n",
-      "8\n",
-      "10\n",
-      "12\n",
-      "14\n",
-      "16\n",
-      "18\n",
-      "20\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "#2\n",
     "for i in range (1,21):\n",
@@ -400,17 +301,9 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 14,
+   "execution_count": null,
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "la moyenne est 15.0\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "n = int(input(\"Choisir un nombre n de nombre \"))\n",
     "total = 0\n",
@@ -421,17 +314,9 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 16,
+   "execution_count": null,
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "la moyenne des nombres est 3.5\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "somme = 0\n",
     "n = 0\n",
@@ -446,17 +331,9 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 18,
+   "execution_count": null,
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "la moyenne des nombres est  5.0\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "#Autre méthode\n",
     "sum = 0\n",
@@ -486,17 +363,9 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 27,
+   "execution_count": null,
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "Le factoriel de  5 vaut 120\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "#correction\n",
     "n = int(input(\"saisir un nombre\"))\n",
@@ -511,17 +380,9 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 20,
+   "execution_count": null,
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "Le factoriel de  -2 vaut 1\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "n = int(input(\"Entrez un nombre\"))\n",
     "result = 1\n",
@@ -532,17 +393,9 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": null,
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "le factoriel de  5 est egal a  120\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "#correction\n",
     "n = int(input(\"saisir un nombre\"))\n",
@@ -560,7 +413,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -673,7 +526,16 @@
     "tags": []
    },
    "outputs": [],
-   "source": []
+   "source": [
+    "from random import random\n",
+    "a=random.randint(0, 9)\n",
+    "b = random.randint(0, 9)\n",
+    "Val = abs (a-b)\n",
+    "Rep = -1\n",
+    "while Rep != Val :\n",
+    "    Rep = int(input(\"saisir un nombre\"))\n",
+    "print(\"Bravo\")\n"
+   ]
   },
   {
    "cell_type": "code",
@@ -683,7 +545,19 @@
    },
    "outputs": [],
    "source": [
-    "\n"
+    "import random\n",
+    "essai = 0\n",
+    "for i in range (0, 5) :\n",
+    "    nb1 = random.randint(0, 9)\n",
+    "    nb2 = random.randint(0, 9)\n",
+    "    Rep = abs(nb1 - nb2)\n",
+    "    pro = -1\n",
+    "    nb_essai = 0\n",
+    "    while pro != Rep :\n",
+    "        pro = int(input(\"proposition\"))\n",
+    "        nb_essai += 1\n",
+    "    essai += nb_essai\n",
+    "print(essai/5)"
    ]
   },
   {
@@ -844,7 +718,11 @@
     "tags": []
    },
    "outputs": [],
-   "source": []
+   "source": [
+    "n = int(input(\"nombre\"))\n",
+    "for i in range (1,n+1) :\n",
+    "    print(\"*\" *i)"
+   ]
   },
   {
    "cell_type": "markdown",
@@ -870,7 +748,11 @@
     "tags": []
    },
    "outputs": [],
-   "source": []
+   "source": [
+    "n = int(input(\"nombre\"))\n",
+    "for i in range (1,n+1) :\n",
+    "    print(\" \"*(n-i)+\"*\"*i)"
+   ]
   },
   {
    "cell_type": "markdown",
